# workshop_site

./: .gitignore  README.md  pyproject.toml
workshop_site/: app.py
workshop_site/static/: styles.css
workshop_site/templates/: layout.html
