[tool.poetry]
name = "workshop-site"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "workshop_site" }]

[tool.poetry.dependencies]
python = "3.11.3"
flask = "^2.3.3"
flask-bootstrap = "^3.3.7.1"
taskipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "flask run"
kill = "kill -9 $(lsof -t -i :5000)"
